--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,11 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# Django migrations
+**/migrations/
+**/migrations/*.py
+!**/migrations/__init__.py
+
 # Flask stuff:
 instance/
 .webassets-cache
