--- a/restaurant_app/frontend/package.json
+++ b/restaurant_app/frontend/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
     "bulma": "^1.0.4",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vuetify": "^3.8.7",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
