--- a/restaurant_app/frontend/package.json
+++ b/restaurant_app/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.9.0",
     "bulma": "^1.0.4",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.8.7",
