--- a/restaurant_app/requirements.txt
+++ b/restaurant_app/requirements.txt
@@ -1,11 +1,22 @@
 asgiref==3.8.1
+certifi==2025.4.26
+charset-normalizer==3.4.2
 Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+drf-yasg==1.21.10
+idna==3.10
+inflection==0.5.1
+packaging==25.0
 pip==25.1
 PyJWT==2.9.0
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.3
 setuptools==78.1.1
 sqlparse==0.5.2
 typing_extensions==4.12.2
+uritemplate==4.2.0
+urllib3==2.4.0
 wheel==0.45.1
